# skillsbench-replay

./: .gitignore  README.md  RESULTS.md  pyproject.toml  run.py  run_benchmark.py  run_judge.py
benchmark/: metadata.json
benchmark/dialogue-parser/: metadata.json
benchmark/dialogue-parser/sample_0/: metadata.json  prompt.json  response.json
benchmark/dialogue-parser/sample_1/: metadata.json  prompt.json  response.json
benchmark/dialogue-parser/sample_10/: metadata.json  prompt.json  response.json
benchmark/dialogue-parser/sample_11/: metadata.json  prompt.json  response.json
benchmark/dialogue-parser/sample_2/: metadata.json  prompt.json  response.json
benchmark/econ-detrending-correlation/: metadata.json
benchmark/flood-risk-analysis/: metadata.json
benchmark/gravitational-wave-detection/: metadata.json
benchmark/hvac-control/: metadata.json
benchmark/mario-coin-counting/: metadata.json
benchmark/offer-letter-generator/: metadata.json
benchmark/protein-expression-analysis/: metadata.json
benchmark/threejs-structure-parser/: metadata.json
benchmark/video-filler-word-remover/: metadata.json
benchmark/virtualhome-agent-planning/: metadata.json
benchmark/weighted-gdp-calc/: metadata.json
configs/: eval-gpt-oss-120b.yaml  eval-granite-8b.yaml  eval-haiku.yaml  eval-llama-8b.yaml  eval-llama70b.yaml  eval-maverick-17b.yaml  eval-sonnet-46.yaml  eval-vllm.yaml
data/rounds/: cache-manifest.json
scripts/: trajectory_to_samples.py
trajectory_bench/: config.py  data.py  judge.py  llm.py  results.py  runner.py
(+1547 files in other folders)
